--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,24 @@
 body {
   font-family: "Roboto", system-ui;
 }
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+  width: 5px;
+}
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #cb3333 transparent;
+}
+body::-webkit-scrollbar-track {
+  background: #cb3333;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  border-radius: 6px;
+  border: 3px solid #cb3333;
+}
